# meadow_poker

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.toml.example
deploy/: deploy.sh
deploy/systemd/: meadow-backend.service  meadow-telegram.service  meadow-web.service
meadow/: coach.py  llm_bot.py  logging_utils.py  main.py  naming.py  orchestrator.py  player_agent.py  replay.py  types.py
meadow/backend/: __init__.py  base.py  coach_service.py  errors.py  http.py  human_agent.py  models.py  replay_service.py  runtime_manager.py  runtime_state.py  serialization.py  service.py
meadow/players/: llm.py
meadow/poker/: __init__.py  decks.py  engine.py
meadow/rendering/: __init__.py  cli.py  core.py  telegram.py
meadow/telegram_app/: app.py
meadow/web_app/: app.py
src/meadow/: __init__.py  __main__.py  coach.py  config.py  hand_history.py  orchestrator.py  table_runner.py
src/meadow/backend/: serialization.py
src/meadow/players/: __init__.py  base.py  rendering.py
src/meadow/poker/: engine.py
src/poker_bot/: __init__.py  __main__.py  coach.py  config.py  hand_history.py  logging_utils.py  main.py  orchestrator.py  replay.py  table_runner.py  types.py
tests/: support.py  test_backend_http.py  test_backend_human_agent.py  test_coach.py  test_config.py  test_engine.py  test_hand_history.py  test_logging.py  test_main.py  test_naming.py  test_orchestrator.py  test_players.py  test_replay.py  test_scenarios.py  test_table_runner.py  test_telegram_app.py  test_web_app.py  test_web_player.py  test_web_registry.py
(+53 files in other folders)
