[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-bot"
version = "0.1.0"
description = "Transport-agnostic poker bot engine with CLI, Telegram, and LLM player agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
telegram = ["aiogram>=3.0.0"]
web = ["aiohttp>=3.10.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.package-data]
"poker_bot" = ["data/*.txt", "web_app/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
